SERVER-28352 Fix ticks increment in LogicalClock::reserveTicks